# aoc2021

1/: day1.hs
2/: day2.hs  day2parse.cabal  day2parse.hs  stack.yaml
